--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,17 +1,28 @@
 # Python
 __pycache__/
 *.py[cod]
+
+# Virtual environments
 .venv/
 venv/
 env/
-# Local data & model artifacts
+
+# Data and models
 data/
 models/*.joblib
 models/*.pkl
+*.h5
+
 # Logs
 logs/
+
+# System files
+.DS_Store
+Thumbs.db
+
 # IDE
 .vscode/
 .idea/
+
 # Secrets
 .env
